[gd_scene load_steps=9 format=3 uid="uid://cgapdgmwxewgf"]

[ext_resource type="Script" path="res://Game/UI/end_screen.gd" id="1_e8a7n"]
[ext_resource type="PackedScene" uid="uid://4xcjv8ohr44n" path="res://Game/UI/sound_button.tscn" id="2_7j8h2"]
[ext_resource type="AudioStream" uid="uid://dbaotc0iwukla" path="res://Assets/Sound/Music/jingles_victory.ogg" id="3_r517u"]
[ext_resource type="AudioStream" uid="uid://la53vur7wcf0" path="res://Assets/Sound/Music/jingles_defeat.ogg" id="4_mpch8"]

[sub_resource type="Animation" id="Animation_2hsvm"]
length = 0.001
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2jncu"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s2wln"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7aiy"]
_data = {
"RESET": SubResource("Animation_2hsvm"),
"in": SubResource("Animation_2jncu"),
"out": SubResource("Animation_s2wln")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_e8a7n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "in"
libraries = {
"": SubResource("AnimationLibrary_r7aiy")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 4
text = "You won!
"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_7j8h2")]
unique_name_in_owner = true
layout_mode = 2
text = "Continue
"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_7j8h2")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit To Menu"

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r517u")
volume_db = -5.0
bus = &"SFX"

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mpch8")
volume_db = -5.0
bus = &"SFX"
